[package]
name = "slog_mongodb"
version = "1.0.0"
authors = ["Johannes Willbold <johannes.willbold@gmail.de>"]
edition = "2018"
readme = "README.md"
repository  = "https://github.com/jwillbold/slog_mongodb"
keywords = ["logging", "slog-rs", "mongodb"]
categories = []
license = "MIT"
description = "MongoDB drain for slog-rs"

[badges]
travis-ci = { repository = "jwillbold/slog_mongodb", branch = "master" }
codecov = { repository = "jwillbold/slog_mongodb", branch = "master", service = "github" }

[dependencies]
mongodb = "0.9"
serde = "1.0"
bson = {version = "0.14", features = ["u2i"] }
slog = "2.5"
chrono = "0.4"

[dev-dependencies]
slog-async = "2.5"
